k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: suite-arqueologica
  labels:
    name: suite-arqueologica
    environment: production
